--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -15,9 +15,11 @@
 /* regras globais */
 
 #body {
-  background-image: url(../images/FundoDoTopico1.jpg);
+  background-image: url(../images/Wallpaper.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
-  background-repeat: none;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 a {
@@ -84,7 +86,7 @@ p{
 #Header {
     width: 100%;
     height: 160px;
-    background-color: rgba(0, 159, 187, 0.7);
+    background-color: rgba(0, 159, 187, 0.9);
 }
 
 #Header_logo {
@@ -107,6 +109,7 @@ p{
     float: right;
     margin-top: 45px;
     border: solid 2px black;
+    background-color: gray;
 }
 
 #OnSite {
@@ -157,6 +160,212 @@ p{
 }
 
 /* conteudo */
+
+  /* Modo Gráfico */
+
+  #ModoGraficoTexto {
+
+    width: 100%;
+
+    height: 100px;
+
+    background-color: aqua;
+
+    clear: both;
+
+  }
+
+    #ModoGraficoImagem{
+
+      width: 100%;
+
+      height: 500px;
+
+      padding-left: 260px;
+
+    background-color: chartreuse;
+
+    }
+
+    /* Área de Trabalho */
+
+    #AreaDeTrabalho {
+
+      width: 30%;
+      height: 600px;
+      float: left;
+      padding-top: 25px;
+      background-color: red;
+
+    }
+
+    #AreaDeTrabalhoImagem {
+
+      height: 368px;
+      padding-top: 20px;
+      
+    }
+
+      /* Trabalho com Janelas */
+
+      #TrabalhoComJanelas {
+
+        width: 40%;
+        height: 600px;
+        padding-top: 25px;
+        float: left;
+        background-color: darkorchid;
+
+      }
+
+
+      #JanelasImagem {
+
+        height: 438px;
+        padding-top: 50px;
+
+
+      }
+
+        /* Configuração do Sistema */
+
+        #ConfiguracaoDoSistema {
+
+          width: 30%;
+          height: 600px;
+          padding-top: 25px;
+          float: left;
+          background-color: darkorange;
+        }
+
+          #FerramentasDoSistemaTexto {
+
+            width: 100%;
+            height: 100px;
+            background-color: gold;
+            clear: both;
+
+          }
+
+            #FerramentasDoSistemaImagem {
+          
+            width: 100%;
+            height: 500px;
+            background-color: mediumseagreen;
+            
+
+          }
+
+            #Acessorios{
+
+              width: 45%;
+              height: 600px;
+              background-color: midnightblue;
+                float: left;
+
+            }
+
+            #MenuDeAjuda {
+
+              width: 55%;
+              height: 600px;
+              background-color: darkkhaki;
+              float: right;
+            }
+
+            #GerenciamentoDeArquivos {
+
+              width: 40%;
+              height: 600px;
+              background-color: khaki;
+              float: left;
+            }
+
+            #UsuariosEPermissoes {
+
+              width: 60%;
+              height: 600px;
+              background-color: indigo;
+              float: right;
+            }
+
+            #InicializacaoFinalizacao {
+
+              width: 30%;
+              height: 600px;
+              background-color: indianred;
+              float: left;
+
+            }
+
+             #InicializacaoFinalizacaoImagem {
+              
+               width: 70%;
+               height: 600px;
+               background-color: palegreen;
+               float: right;
+
+            }
+
+            #InstalacaoMaquinaVirtual {
+
+              width: 60%;
+              height: 800px;
+              background-color: lightskyblue;
+              float: left;
+            }
+
+            #InstalacaoMaquinaVirtualImagem {
+
+              width: 40%;
+              height: 800px;
+              background-color: seagreen;
+              float: right;
+
+            }
+
+            #Pacotes{
+
+              width: 30%;
+              height: 600px;
+              background-color: darkslategray;
+              float: left;
+
+            }
+
+            #PacotesImagem {
+
+              width: 30%;
+              height: 600px;
+              background-color: hotpink;
+              float: left;
+
+            }
+
+            #Atualização {
+
+              width: 40%;
+              height: 600px;
+              background-color: khaki;
+              float: left;
+            }
+            
+            #Programas {
+
+              width: 55%;
+              height: 800px;
+              float: left;
+              background-color: fuchsia;
+            }
+
+            #ProgramasImagem {
+
+
+              width: 45%;
+              height: 800px;
+              float: right;
+              background-color: lime;
+            }
 
   /* rodapé */
 
@@ -214,7 +423,7 @@ p{
   width: 80px;
   border-radius: 100%;
   margin: 10px;
-  transition: 0.5s;
+  transition: 0.1s;
 }
 
 .User_Icon:hover {
@@ -226,9 +435,59 @@ p{
   width: 1300px;
   background-color: crimson;
 }
+/* Seção da caixa definição*/
 #CaixaDefinicao{
+  background-color: purple;
+  width:600px;
+  height:600px;
   float: left;
+   margin-left: 20px;
 }
-#CaixaDefinicao{
-  float: 
+#DefinicaoTexto{
+  float: left;
+  background-color: lightblue;
+  width: 300px;
+  height:450px;
+}
+#DefinicaoImagem{
+  float: left;
+  background-color: palevioletred;
+  width: 300px;
+  height:450px;
+}
+
+/*Seção da caixa História*/
+#CaixaHistoria{
+  background-color: chocolate;
+  width:  600px;
+  height: 600px;
+  float: left;
+  margin-left: 60px;
+}
+#ConteudoHistoria{
+ height: inherit;
+ width: inherit;
+ background-color: cyan;
+  
+}
+.Coluna1Titulo{
+  text-align: left;
+  margin-bottom: 20px;
+}
+#HistoriaTexto{
+  float: left;
+  height: 540px;
+  width:400px;
+  background-color: cyan;
+} 
+#HistoriaImagens{
+  float: left;
+  height: 540px;
+  width:200px;
+  background-color: chartreuse;
+}
+#LinhaConteudo2{
+  height: 600px;
+  width: 1300px;
+  background-color: olive;
 }
