--- a/Style/Topico4.css
+++ b/Style/Topico4.css
@@ -27,7 +27,7 @@ color: inherit;
 }
 
 h1, h2,h3 {
-  font-size: 45px;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
   color: black;
@@ -46,7 +46,7 @@ font-size: 19px;
 
 p{
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 25px;
   line-height: 25px;
   font-family: Writer, Arial;
   text-align: center;
@@ -191,6 +191,16 @@ background-color: rgb(95, 95, 95);
 }
 /* conteudo */
 /*--Titulo */
+#Banner{
+  background-image: url(../images/Topico4/Banner.jpg); 
+  width: 100%;
+  height: 600px;  
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
+  margin-bottom: 50px;
+}
+
 #Titulo {
   height: 50px;
   width: 1300px;
@@ -202,28 +212,55 @@ background-color: rgb(95, 95, 95);
 }
 /*--Formatações */
 #Formatacoes {
-  height: 700px;
-  width: 1300px;
+  height: 400px;
+  margin-bottom: 30px;
+  width: 600px;
+  margin-right: 50px;
   margin-top: 50px;
-}
-#TituloFormatacoes {
-  width: 1300px;
-  height: 100px;
-}
-/* #TextoFormatacoes h1 { */
-  /* font-size: ; */
-/* } */
-
-#OpcoesFormatacoes {
-  width: 860px;
-  height: 700px;
-  margin-top: 50px;
-}
-.FormatacoesCaixa {
   float: left;
-  height: 280px;
-  width: 430px;
-  border: solid 1px black;
+  clear: both;
+}
+
+#Formatacoes h1 {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+  font-family: Writer, Arial;
+  letter-spacing: 10px;
+}
+
+#Formatacoes li {
+  margin-top: 5px;
+  font-size: 18px;
+  font-family: Writer, Arial;
+  text-align: center;
+  color: black;
+  list-style: decimal;
+}
+
+#Insercao {
+  margin-top: 50px;
+  height: 400px;
+  width: 650px;
+  float: left;
+}
+#Insercao h1 {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+  font-family: Writer, Arial;
+  letter-spacing: 10px;
+}
+
+#Insercao li {
+  margin-top: 5px;
+  font-size: 18px;
+  font-family: Writer, Arial;
+  text-align: center;
+  color: black;
+  list-style: decimal;
 }
 /* rodapé */
 
