--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -15,7 +15,7 @@
 /* regras globais */
 
 #body {
-  background-image: url(../images/blackWallpaper.jpg);
+  background-image: url(../images/Wallpaper.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -37,6 +37,7 @@ h1, h2{
   text-align: center;
   color:white;
   font-family: arial;
+  letter-spacing: 2px;
 }
 
 h2{
@@ -51,7 +52,7 @@ p{
 
   font-family: arial;
 
-  text-align: center;
+  text-align: justify;
 
   color: white;
 
@@ -86,7 +87,7 @@ p{
 #Header {
     width: 100%;
     height: 160px;
-    background-color: rgba(0, 159, 187, 0.9);
+    background-color: rgba(38, 80, 218, 0.9);
 }
 
 #Header_logo {
@@ -160,6 +161,225 @@ p{
 }
 
 /* conteudo */
+#TituloPrincipal{
+    margin-bottom: 60px;
+    text-decoration: underline;
+    margin-top: 20px;
+}
+#sobre {
+    height: 700px;
+    width: 1300px;
+    background-color: #2d2d5c;
+  }
+  /* Seção da caixa definição*/
+  #CaixaDefinicao{
+    /* background-color: purple; */
+    width:600px;
+    height:600px;
+    float: left;
+     margin-left: 20px;
+  }
+  #DefinicaoTexto{
+    float: left;
+    /* background-color: lightblue; */
+    width: 300px;
+    height:450px;
+  }
+  #DefinicaoImagem{
+    float: left;
+    /* background-color: palevioletred; */
+    width: 300px;
+    height:450px;
+  }
+  #DefinicaoImagem img{
+    width: inherit;
+    height: inherit;
+  }
+  /*Seção da caixa História*/
+  #CaixaHistoria{
+    /* background-color: chocolate; */
+    width:  600px;
+    height: 600px;
+    float: left;
+    margin-left: 60px;
+  }
+  #ConteudoHistoria{
+   height: inherit;
+   width: inherit;
+   /* background-color: cyan; */
+    
+  }
+  .Coluna1Titulo{
+    text-align: left;
+    margin-bottom: 20px;
+  }
+  #HistoriaTexto{
+    float: left;
+    height: 540px;
+    width:350px;
+    /* background-color: cyan; */
+  } 
+  #HistoriaImagens{
+    float: left;
+    height: 540px;
+    width:250px;
+    /* background-color: chartreuse; */
+  }
+  #HistoriaImagens img{
+     width: 200px;
+     height: 200px;
+     margin-top: 50px;     
+   /* background-color: chartreuse; */
+  }
+  #LinhaConteudo2{
+    height: 600px;
+    width: 1300px;
+    background-color: #2d2d5c; 
+  }
+  .Linha2Colunas{
+    height: 500px;
+    width: 400px;
+    float: left;
+    margin-left: 25px;
+  }
+  .Linha2Subtitulos{
+    margin-bottom: 30px;
+    text-align: left;
+  }
+  .NavegacaoImagem{
+    height: 100px;
+    width: 100px;
+    background-color: #2d2d5c;
+    float: left; 
+    margin-left: 70px;
+  }
+  .NavegacaoImagem img{
+      width: inherit;
+      height: inherit;
+  }
+  #Linha2Coluna2Texto{
+    float: left;
+    /* background-color: khaki; */
+    width: 220px;
+    height: 400px;
+  }
+  #Linha2Coluna2Imagem{
+    margin-top: 110px;
+    margin-left: 20px;
+    float: left;
+    width: 150px;
+    height: 150px;
+    /* background-color: lightgoldenrodyellow; */
+  }
+  #Linha2Coluna2Imagem img{
+    width: inherit;
+    height: inherit;
+  }
+  #ExclusaoLinha2{
+    width: 150px;
+    height: 270px;
+    /* background-color: bisque; */
+    float: left;
+  }
+  #ExclusaoLinha2Imagem{
+    width: 200px;
+    height: 200px;
+    /* background-color: chocolate; */
+    float: left;
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  #ExclusaoLinha2Imagem img{
+    width: inherit;
+    height: inherit;
+  }
+  
+  /* Linha 3 */
+  
+  #Linha3{
+    width: 1300px;
+    height: 600px;
+    background-color: #2d2d5c;
+  }
+  .ColunasLinha3{
+    height: 550px;
+    width: 400px;
+    /* background-color: darkslategrey; */
+    float: left;
+    margin-left: 30px;
+  }
+  .ColunasLinha3 p{
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-right: 10px;
+  }
+  #Linha3Coluna{
+    float: left;
+    /* background-color: dimgrey;  */
+    height: 200px;
+    width: 200px;
+  }
+
+  #Linha3Coluna img{
+    width: 180px;
+    height: 180px;
+  }
+  #Linha3Coluna2, #Linha3Coluna3{
+    height: 400px;
+    width: 230px;
+    float: left;
+    /* background-color: cornflowerblue; */
+  }
+  
+  #Linha3Coluna3 p{
+    margin-bottom: 20px;
+  }
+  
+  #Linha3Coluna2_Imagem, #Linha3Coluna3_Imagem{
+    height: 200px;
+    float: left;
+    width: 150px;
+    /* background-color: azure; */
+    margin-left: 20px;
+    margin-top: 70px;
+  }
+  #Linha3Coluna2_Imagem img{
+    margin-top: 50px;;
+    width: inherit;
+    height: 150px;
+  }
+  #Linha3Coluna3_Imagem img{
+    margin-top: 50px;;
+    width: inherit;
+    height: 150px;
+  }
+  /* LINHA 4 */
+  
+  #Linha4{
+    width: 1300px;
+    height: 600px;
+    background-color: #2d2d5c;
+  }
+  #Linha4_Texto{
+    float: left;
+    width: 680px;
+    height: inherit;
+    /* background-color: darkred; */
+    margin-left: 20px;
+  }
+  #Linha4_Texto p{
+    font-size: 30px;
+  }
+  #Linha4_Texto p{
+    margin-bottom: 40px;
+  }
+  #Linha4_Imagem{
+    float: left;
+    width: 580px;
+    height: inherit;
+    /* background-color: rgb(53, 34, 34); */
+    margin-right: 20px;
+  }
 
 /* Modo Gráfico */
 
@@ -169,7 +389,7 @@ p{
 
     height: 500px;
 
-    background-color: rgba(86, 86, 86, 0.5);
+    background-color: #2d2d5c;
 
     padding-left: 60px;
 
@@ -209,7 +429,7 @@ p{
       float: left;
       padding-top: 25px;
       margin-top: 10px;
-      background-color: rgba(128, 121, 121, 0.5);
+      background-color: #2d2d5c;
 
     }
 
@@ -230,7 +450,7 @@ p{
         padding-top: 25px;
         margin-top: 10px;
         float: left;
-        background-color: rgba(151, 149, 149, 0.5);
+        background-color: #2d2d5c;
 
       }
 
@@ -252,7 +472,7 @@ p{
           padding-top: 25px;
           margin-top: 10px;
           float: left;
-          background-color:  rgba(128, 121, 121, 0.5);
+          background-color:  #2d2d5c;
         }
 
         #ConfiguracaoDoSistemaImagem {
@@ -267,7 +487,7 @@ p{
             width: 100%;
             height: 100px;
             padding-top: 15px;
-            background-color: rgba(151, 149, 149, 0.5);
+            background-color: #2d2d5c;
             clear: both;
 
           }
@@ -287,7 +507,7 @@ p{
               height: 600px;
               padding-top: 10px;
               margin-top: 10px;
-              background-color: rgba(206, 206, 206, 0.5);
+              background-color: #2d2d5c;
                 float: left;
 
             }
@@ -321,7 +541,7 @@ p{
               width: 55%;
               height: 600px;
               margin-top: 10px;
-              background-color: rgba(183, 183, 183, 0.5);
+              background-color: #2d2d5c;
               float: right;
             }
 
@@ -352,7 +572,7 @@ p{
               width: 20%;
               height: 500px;
               margin-top: 10px;
-              background-color: rgba(206, 206, 206, 0.5);
+              background-color: #2d2d5c;
               float: left;
             }
 
@@ -375,7 +595,7 @@ p{
               padding-left: 20px;
               padding-right: 20px;
               margin-top: 10px;
-              background-color: rgba(119, 110, 110, 0.5);
+              background-color: #2d2d5c;
               float: right;
             }
 
@@ -392,7 +612,7 @@ p{
               padding-top: 10px;
               padding-left: 30px;
               padding-right: 30px;
-              background-color: rgba(86, 84, 84, 0.5);
+              background-color: #2d2d5c;
               float: left;
 
             }
@@ -413,7 +633,7 @@ p{
               padding-right: 40px;
               padding-top: 10px;
               margin-top: 10px;
-              background-color: rgba(160, 160, 160, 0.5);
+              background-color: #2d2d5c;
               clear: both;
               float: left;
 
@@ -438,7 +658,7 @@ p{
               padding-left: 25px;
               padding-right: 20px;
               margin-top: 10px;
-              background-color:  rgba(160, 160, 160, 0.5);
+              background-color:  #2d2d5c;
               float: right;
             }
 
@@ -468,7 +688,7 @@ p{
 
               width: 30%;
               height: 500px;
-              background-color:  rgba(71, 71 71, 0.5);
+              background-color: #2d2d5c;
               padding-left: 70px;
               padding-right: 70px;
               margin-top: 10px;
@@ -489,7 +709,7 @@ p{
 
               width: 40%;
               height: 500px;
-              background-color: rgba(119, 110, 110, 0.5);
+              background-color: #2d2d5c;
               padding-left: 60px;
               padding-right: 60px;
               margin-top: 10px;
@@ -504,7 +724,7 @@ p{
               padding-left: 60px;
               padding-right: 60px;
               float: left;
-              background-color: rgba(71, 71 71, 0.5);
+              background-color: #2d2d5c;
             }
 
             #Programas2 {
@@ -515,7 +735,7 @@ p{
 
               float: left;
 
-              background-color: rgba(168, 168, 168, 0.5);
+              background-color: #2d2d5c;
 
             }
 
@@ -561,7 +781,7 @@ p{
 #Rodape {
     width: 100%;
     height: 200px;
-    background-color: rgba(0, 159, 187, 0.7);
+    background-color:  rgba(38, 80, 218, 0.9);
 
     clear: both;
 }
@@ -619,65 +839,3 @@ p{
   border: solid 4px blue;
   cursor: pointer;
 }
-#sobre {
-  height: 700px;
-  width: 1300px;
-  background-color: crimson;
-}
-/* Seção da caixa definição*/
-#CaixaDefinicao{
-  background-color: purple;
-  width:600px;
-  height:600px;
-  float: left;
-   margin-left: 20px;
-}
-#DefinicaoTexto{
-  float: left;
-  background-color: lightblue;
-  width: 300px;
-  height:450px;
-}
-#DefinicaoImagem{
-  float: left;
-  background-color: palevioletred;
-  width: 300px;
-  height:450px;
-}
-
-/*Seção da caixa História*/
-#CaixaHistoria{
-  background-color: chocolate;
-  width:  600px;
-  height: 600px;
-  float: left;
-  margin-left: 60px;
-}
-#ConteudoHistoria{
- height: inherit;
- width: inherit;
- background-color: cyan;
-
-}
-.Coluna1Titulo{
-  text-align: left;
-  margin-bottom: 20px;
-}
-#HistoriaTexto{
-  float: left;
-  height: 540px;
-  width:400px;
-  background-color: cyan;
-}
-#HistoriaImagens{
-  float: left;
-  height: 540px;
-  width:200px;
-  background-color: chartreuse;
-}
-#LinhaConteudo2{
-  height: 600px;
-  width: 1300px;
-  background-color: olive;
-}
-
