--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -15,7 +15,7 @@
 /* regras globais */
 
 #body {
-  background-image: url(../images/Wallpaper.jpg);
+  background-image: url(../images/Topico2/Wallpaper.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
