--- a/Style/Topico3.css
+++ b/Style/Topico3.css
@@ -15,9 +15,11 @@
 /* regras globais */
 
 #body {
-  background-image: url(../images/FundoDoTopico1.jpg);
+  background-image: url(../images/blackWallpaper.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
-  background-repeat: none;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 a {
@@ -29,7 +31,7 @@ a:visited, a:link, a:active {
 }
 
 h1, h2{
-  
+
   font-size: 50px;
   font-weight: bold;
   text-align: center;
@@ -38,9 +40,9 @@ h1, h2{
 }
 
 h2{
-  
+
   font-size: 30px;
-  
+
 }
 
 p{
@@ -84,14 +86,14 @@ p{
 #Header {
     width: 100%;
     height: 160px;
-    background-color: rgba(0, 159, 187, 0.7);
+    background-color: rgba(0, 159, 187, 0.9);
 }
 
 #Header_logo {
     height: 156px;
     width: 710px;
     float: left;
-    clear: both; 
+    clear: both;
     padding-top: 10px;
 }
 
@@ -107,6 +109,7 @@ p{
     float: right;
     margin-top: 45px;
     border: solid 2px black;
+    background-color: gray;
 }
 
 #OnSite {
@@ -158,6 +161,401 @@ p{
 
 /* conteudo */
 
+/* Modo Gráfico */
+
+  #ModoGraficoTexto {
+
+    width: 30%;
+
+    height: 500px;
+
+    background-color: rgba(86, 86, 86, 0.5);
+
+    padding-left: 60px;
+
+    padding-right: 60px;
+
+    clear: both;
+
+    float: left;
+
+  }
+
+
+  #ModoGraficoTexto p{
+
+    font-size: 25px;
+
+  }
+
+    #ModoGraficoImagem{
+
+      width: 70%;
+
+      height: 500px;
+
+    background-color: chartreuse;
+
+    float: right;
+
+    }
+
+    /* Área de Trabalho */
+
+    #AreaDeTrabalho {
+
+      width: 30%;
+      height: 600px;
+      float: left;
+      padding-top: 25px;
+      margin-top: 10px;
+      background-color: rgba(128, 121, 121, 0.5);
+
+    }
+
+    #AreaDeTrabalhoImagem {
+
+      height: 368px;
+      padding-top: 20px;
+      padding-bottom: 10px;
+
+    }
+
+      /* Trabalho com Janelas */
+
+      #TrabalhoComJanelas {
+
+        width: 40%;
+        height: 600px;
+        padding-top: 25px;
+        margin-top: 10px;
+        float: left;
+        background-color: rgba(151, 149, 149, 0.5);
+
+      }
+
+
+      #JanelasImagem {
+
+        height: 438px;
+        padding-top: 50px;
+        padding-bottom: 10px;
+
+      }
+
+        /* Configuração do Sistema */
+
+        #ConfiguracaoDoSistema {
+
+          width: 30%;
+          height: 600px;
+          padding-top: 25px;
+          margin-top: 10px;
+          float: left;
+          background-color:  rgba(128, 121, 121, 0.5);
+        }
+
+        #ConfiguracaoDoSistemaImagem {
+
+          height: 390px;
+          padding-bottom: 10px;
+          padding-top: 10px;
+        }
+
+          #FerramentasDoSistemaTexto {
+
+            width: 100%;
+            height: 100px;
+            padding-top: 15px;
+            background-color: rgba(151, 149, 149, 0.5);
+            clear: both;
+
+          }
+
+            #FerramentasDoSistemaImagem {
+
+            width: 100%;
+            height: 500px;
+            background-color: mediumseagreen;
+
+
+          }
+
+            #Acessorios{
+
+              width: 45%;
+              height: 600px;
+              padding-top: 10px;
+              margin-top: 10px;
+              background-color: rgba(206, 206, 206, 0.5);
+                float: left;
+
+            }
+
+            #Acessorios ul{
+
+
+              color: white;
+
+              list-style: none;
+
+              text-align: center;
+
+              font-family: arial;
+
+              font-size: 18px;
+
+
+            }
+
+            #AcessoriosImagem {
+
+              height: 315px;
+              width: 100%;
+              padding-top: 20px;
+
+            }
+
+            #MenuDeAjuda {
+
+              width: 55%;
+              height: 600px;
+              margin-top: 10px;
+              background-color: rgba(183, 183, 183, 0.5);
+              float: right;
+            }
+
+          #MenuDeAjudaTexto{
+            padding-left: 15px;
+
+          }
+
+          #MenuDeAjudaTexto p{
+              text-align: left;
+            }
+
+          #MenuDeAjudaTexto h2{
+              text-align: left;
+            }
+
+
+
+            #MenuDeAjudaImagem {
+
+              height: 455px;
+              padding-top: 30px;
+
+            }
+
+            #GerenciamentoDeArquivos {
+
+              width: 20%;
+              height: 500px;
+              margin-top: 10px;
+              background-color: rgba(206, 206, 206, 0.5);
+              float: left;
+            }
+
+            #GerenciamentoDeArquivosImagem {
+
+              width:20%;
+              height: 500px;
+              margin-top: 10px;
+              background-color: red;
+              float: left;
+
+
+            }
+
+
+            #UsuariosEPermissoes {
+
+              width: 60%;
+              height: 250px;
+              padding-left: 20px;
+              padding-right: 20px;
+              margin-top: 10px;
+              background-color: rgba(119, 110, 110, 0.5);
+              float: right;
+            }
+
+            #UsuariosEPermissoes p, #UsuariosEPermissoes2 p{
+
+              font-size: 17px;
+
+            }
+
+            #UsuariosEPermissoes2 {
+
+              width: 35%;
+              height: 250px;
+              padding-top: 10px;
+              padding-left: 30px;
+              padding-right: 30px;
+              background-color: rgba(86, 84, 84, 0.5);
+              float: left;
+
+            }
+
+            #UsuariosEPermissoesImagem {
+
+              float: right;
+              width: 25%;
+              height: 250px;
+
+            }
+
+            #InicializacaoFinalizacao {
+
+              width: 40%;
+              height: 500px;
+              padding-left: 40px;
+              padding-right: 40px;
+              padding-top: 10px;
+              margin-top: 10px;
+              background-color: rgba(160, 160, 160, 0.5);
+              clear: both;
+              float: left;
+
+            }
+
+            #InstalacaoMaquinaVirtualImagem {
+
+              width: 25%;
+              height: 500px;
+              margin-top: 10px;
+              background-color: blue;
+              float: left;
+
+            }
+
+
+
+            #InstalacaoMaquinaVirtual {
+
+              width: 35%;
+              height: 500px;
+              padding-left: 25px;
+              padding-right: 20px;
+              margin-top: 10px;
+              background-color:  rgba(160, 160, 160, 0.5);
+              float: right;
+            }
+
+            #InstalacaoMaquinaVirtual p{
+
+              font-size: 16px;
+
+            }
+
+            #InstalacaoMaquinaVirtual ol{
+
+
+              color: white;
+
+              font-family: arial;
+
+
+            }
+
+            #InstalacaoMaquinaVirtual h2{
+
+              font-size: 28px;
+            }
+
+
+            #Pacotes{
+
+              width: 30%;
+              height: 500px;
+              background-color:  rgba(71, 71 71, 0.5);
+              padding-left: 70px;
+              padding-right: 70px;
+              margin-top: 10px;
+              clear: both;
+              float: left;
+
+            }
+
+            #Pacotes a:link{
+
+              text-decoration: underline;
+              color: blue;
+
+
+            }
+
+            #Atualização {
+
+              width: 40%;
+              height: 500px;
+              background-color: rgba(119, 110, 110, 0.5);
+              padding-left: 60px;
+              padding-right: 60px;
+              margin-top: 10px;
+              float: left;
+            }
+
+            #Programas {
+
+              width: 30%;
+              height: 500px;
+              margin-top: 10px;
+              padding-left: 60px;
+              padding-right: 60px;
+              float: left;
+              background-color: rgba(71, 71 71, 0.5);
+            }
+
+            #Programas2 {
+
+              width: 55%;
+
+              height: 500px;
+
+              float: left;
+
+              background-color: rgba(168, 168, 168, 0.5);
+
+            }
+
+            #Programas2Texto {
+
+              width: 100%;
+              height: 40%;
+
+              padding-top: 20px;
+              padding-left: 20px;
+              padding-right: 20px;
+
+            }
+
+            #Programas2Texto p {
+
+              font-size: 18px;
+            }
+
+
+            #Programas2Imagem {
+
+              width: 100%;
+              height: 60%;
+              background-color: black;
+
+            }
+
+
+            #Programas2Imagem2 {
+
+              width: 45%;
+
+              height: 500px;
+
+              float: right;
+
+              background-color: red;
+            }
+
   /* rodapé */
 
 #Rodape {
@@ -172,7 +570,7 @@ p{
     height: 200px;
     width: 750px;
     float: left;
-    clear: both; 
+    clear: both;
     padding-top: 10px;
 }
 
@@ -214,10 +612,70 @@ p{
   width: 80px;
   border-radius: 100%;
   margin: 10px;
-  transition: 0.5s;
+  transition: 0.1s;
 }
 
 .User_Icon:hover {
   border: solid 4px blue;
   cursor: pointer;
 }
+#sobre {
+  height: 700px;
+  width: 1300px;
+  background-color: crimson;
+}
+/* Seção da caixa definição*/
+#CaixaDefinicao{
+  background-color: purple;
+  width:600px;
+  height:600px;
+  float: left;
+   margin-left: 20px;
+}
+#DefinicaoTexto{
+  float: left;
+  background-color: lightblue;
+  width: 300px;
+  height:450px;
+}
+#DefinicaoImagem{
+  float: left;
+  background-color: palevioletred;
+  width: 300px;
+  height:450px;
+}
+
+/*Seção da caixa História*/
+#CaixaHistoria{
+  background-color: chocolate;
+  width:  600px;
+  height: 600px;
+  float: left;
+  margin-left: 60px;
+}
+#ConteudoHistoria{
+ height: inherit;
+ width: inherit;
+ background-color: cyan;
+
+}
+.Coluna1Titulo{
+  text-align: left;
+  margin-bottom: 20px;
+}
+#HistoriaTexto{
+  float: left;
+  height: 540px;
+  width:400px;
+  background-color: cyan;
+}
+#HistoriaImagens{
+  float: left;
+  height: 540px;
+  width:200px;
+  background-color: chartreuse;
+}
+#LinhaConteudo2{
+  height: 600px;
+  width: 1300px;
+  background-color: olive;
