--- a/Style/Topico2.css
+++ b/Style/Topico2.css
@@ -14,9 +14,6 @@
 
 /* regras globais */
 
-#body {
-
-}
 
 a {
   text-decoration: none;
@@ -121,6 +118,7 @@ p{
     float: right;
     margin-top: 45px;
     border: solid 2px black;
+    border-radius: 15px;
 }
 
 #OnSite {
@@ -186,7 +184,7 @@ p{
 #sobre {
     height: 750px;
     width: 1300px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
   }
   /* Seção da caixa definição*/
   #CaixaDefinicao{
@@ -251,7 +249,7 @@ p{
   #LinhaConteudo2{
     height: 600px;
     width: 1300px;
-    background-color: #ffffff; 
+    background-color: #e0e0e0;
   }
   .Linha2Colunas{
     height: 500px;
@@ -266,7 +264,7 @@ p{
   .NavegacaoImagem{
     height: 100px;
     width: 100px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
     float: left; 
     margin-left: 70px;
   }
@@ -316,7 +314,7 @@ p{
   #Linha3{
     width: 1300px;
     height: 600px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
   }
   .ColunasLinha3{
     height: 550px;
@@ -375,7 +373,7 @@ p{
   #Linha4{
     width: 1300px;
     height: 600px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
   }
   #Linha4_Texto{
     float: left;
@@ -402,12 +400,12 @@ p{
 #ModoGrafico{
     height: 600px;
     width: 1300px;
-    background-color:  #ffffff; 
+    background-color: #e0e0e0; 
 }
 #ModoGraficoTexto {
     width: 30%;
     height: 500px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
     padding-left: 60px;
     padding-right: 60px;
     clear: both;
@@ -437,7 +435,7 @@ p{
 #Linha6{
     width: 1300px;
     height: 600px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
 }
 #AreaDeTrabalho {
     width: 30%;
@@ -458,7 +456,7 @@ p{
 #Linha7{
     width: 1300px;
     height: 650px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
 }
 
 /* Trabalho com Janelas */
@@ -483,7 +481,7 @@ p{
 	width: 350px;
 	height: 600px;
 	float: left;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
     padding-left:10px;
     padding-right:10px;
 }
@@ -498,7 +496,7 @@ p{
 	width: 1200px;
 	height: 100px;
 	padding-top: 15px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	clear: both;
 }
 
@@ -514,7 +512,7 @@ p{
 #Linha8{
     width: 1300px;
     height: 650px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
 }
 #Acessorios {
 	width: 600px;
@@ -541,7 +539,7 @@ p{
 	width: 600px;
 	height: 600px;
 	margin-top: 10px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	float: right;
 }
 
@@ -565,7 +563,7 @@ p{
 #Linha9{
     width: 1300px;
     height: 800px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
     
 }
 #Linha9Coluna2{
@@ -601,7 +599,7 @@ p{
 #UsuariosEPermissoes {
 	width: 600px;
 	height: 100px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	float: left;
 }
 
@@ -613,7 +611,7 @@ p{
 	width:  290px;
     margin-right: 10px;
 	height: 300px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	float: left;
 }
 
@@ -633,7 +631,7 @@ p{
 	padding-right: 40px;
 	padding-top: 10px;
 	margin-top: 10px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	clear: both;
 	float: left;
 }
@@ -652,7 +650,7 @@ p{
 	padding-left: 25px;
 	padding-right: 20px;
 	margin-top: 10px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	float: right;
 }
 
@@ -671,12 +669,12 @@ p{
 #Linha10{
     width: 1300px;
     height: 600px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
 }
 #Linha11{
     width: 1300px;
     height: 500px;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
 }
 #Pacotes {
 	width: 400px;
@@ -696,7 +694,7 @@ p{
 #Atualizacao {
 	width: 400px;
 	height: 500px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 	float: left;
     margin-left: 20px;
     padding-left: 10px;
@@ -710,19 +708,19 @@ p{
     padding-left: 20px;
     padding-right: 20px; 
 	float: left;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 }
 #Linha12{
     width: 1300px;
     height: 500px;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 }
 
 #Programas2 {
 	width: 500px;
 	height: 500px;
 	float: left;
-	background-color: #ffffff;
+	background-color: #e0e0e0;
 }
 
 #Programas2Texto {
@@ -764,7 +762,7 @@ p{
 #Rodape {
     width: 100%;
     height: 200px;
-    background-color:  rgba(38, 80, 218, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
 
     clear: both;
 }
